--- a/po/is/kdvi.po
+++ b/po/is/kdvi.po
@@ -1,17 +1,14 @@
 # Icelandic translation of kdvi.pot
-# Copyright (C) 1998 Free Software Foundation, Inc.
-# Thorarinn R. Einarsson <thori@mindspring.com>, 1998.
+# Copyright (C) 1999 Free Software Foundation, Inc.
+# Thorarinn R. Einarsson <thori@mindspring.com>, 1999.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: kdvi\n"
 "POT-Creation-Date: 1998-12-28 15:35+0100\n"
-"PO-Revision-Date: 1999-01-01 23:10+0100\n"
+"PO-Revision-Date: 1999-02-01 22:10-0500\n"
 "Last-Translator: Thorarinn R. Einarsson <thori@mindspring.com>\n"
-"Language-Team: Icelandic <kde-isl@mmedia.is>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=8859-1\n"
-"Content-Transfer-Encoding: MIME\n"
+"Language-Team: is <kde-isl@mmedia.is>\n"
 
 #: dviwin.cpp:215 dviwin.cpp:231 dviwin.cpp:245 dviwin.cpp:282 dviwin.cpp:299
 #: kdvi.cpp:514
@@ -24,7 +21,7 @@ msgid ""
 "only after you start kdvi again!"
 msgstr ""
 "Breytingar á myndun leturs taka gildi næst\n"
-"þegar þú keyrir kdvi!"
+"þegar þú keyrir Kdvi!"
 
 #: dviwin.cpp:232
 msgid ""
@@ -32,7 +29,7 @@ msgid ""
 "only after you start kdvi again!"
 msgstr ""
 "Breytingar á letur slóð taka gildi\n"
-"næst þegar þú keyrir kdvi!"
+"næst þegar þú keyrir Kdvi!"
 
 #: dviwin.cpp:246
 msgid ""
@@ -40,7 +37,7 @@ msgid ""
 "only after you start kdvi again!"
 msgstr ""
 "Breytingar á Metafont ham taka gildi\n"
-"næst þegar þú keyrir kdvi!"
+"næst þegar þú keyrir Kdvi!"
 
 #: dviwin.cpp:283
 msgid ""
@@ -48,7 +45,7 @@ msgid ""
 "only after you start kdvi again!"
 msgstr ""
 "Breytingar á upplausn taka gildi næst\n"
-"þegar þú keyrir kdvi!"
+"þegar þú keyrir Kdvi!"
 
 #: dviwin.cpp:300
 msgid ""
@@ -56,7 +53,7 @@ msgid ""
 "only after you start kdvi again!"
 msgstr ""
 "Breytingar á Gamma taka gildi næst\n"
-"þegar þú keyrir kdvi!"
+"þegar þú keyrir Kdvi!"
 
 #: dviwin.cpp:423 dviwin.cpp:457
 msgid "HEY"
@@ -200,8 +197,8 @@ msgid ""
 "\n"
 "by Markku Hihnala"
 msgstr ""
-"\n"
-"\n"
+"\n" 
+"\n" 
 "eftir Markku Hihnala"
 
 #: kdvi.cpp:261
@@ -418,7 +415,7 @@ msgstr "Engin valslá"
 
 #: kdvi.cpp:747
 msgid "Menu bar is shown"
-msgstr "Valslá er til sýnd"
+msgstr "Valslá er sýnd"
 
 #: kdvi.cpp:765
 msgid "No button bar"
