--- a/po/is/kghostview.po
+++ b/po/is/kghostview.po
@@ -1,17 +1,14 @@
 # Icelandic translation of kghostview.po
-# Copyright (C) 1998 Free Software Foundation, Inc.
-# Thorarinn Einarsson <thori@mindspring.com>, 1998.
+# Copyright (C) 1999 Free Software Foundation, Inc.
+# Thorarinn Einarsson <thori@mindspring.com>, 1999.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostview\n"
-"POT-Creation-Date: 1999-01-31 01:52+0100\n"
-"PO-Revision-Date: 1998-11-04 10:50-0500\n"
+"POT-Creation-Date: 1998-11-17 10:48+0100\n"
+"PO-Revision-Date: 1999-02-01 10:50-0500\n"
 "Last-Translator: Thorarinn Einarsson <thori@mindspring.com>\n"
 "Language-Team: is <kde-isl@mmedia.is>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso8859-1\n"
-"Content-Transfer-Encoding: ENCODING\n"
 
 #: marklist.cpp:38
 msgid "Mark current page"
@@ -62,20 +59,20 @@ msgid ""
 "along with this program; if not, write to the Free Software\n"
 "Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 msgstr ""
-"\n"
+"\n" 
+"Íslensk þýðing: Þórarinn R. Einarsson (thori@mindspring.com)\n"
 "Þetta forrit er frítt.  Þú mátt dreifa því og/eða breyta skv.\n"
 "skilmálum GNU höfundaréttarleyfisins (General Public License)\n"
-"eins og það er gefið út af Samtökum um Fríann Hugbúnað (FSF).\n"
+"eins og það er gefið út af Samtökum um Frían Hugbúnað (FSF).\n"
+"\n" 
 "Þér er frjálst að nota útgáfu 2 eða síðar af þessu leyfi.\n"
-"\n"
 "Þessu forriti er dreift með von um að það komi þér að gagni,\n"
-"en án nokkurra skuldbindinga, ábyrgðar um verðgildi eða\n"
-"notagildi.\n"
+"en án nokkurra skuldbindinga eða ábyrgðar um verð- eða notagildi.\n"
 "Skoðaðu GNU höfundarleyfið ef þér vantar frekar upplýsingar.\n"
-"\n"
-"Þú ættir að hafa fengið afrit af GNU höfundarleyfinu með þessu\n"
-"forriti.  Ef ekki, skrifaðu þá til Free Software Foundation, Inc.\n"
-"675 Mass Ave, Cambridge, MA 02139, USA."
+"\n"
+"Þú ættir að hafa fengið afrit af því með þessu forriti.  Ef ekki,\n"
+"skrifaðu þá Free Software Foundation, Inc.675 Mass Ave, Cambridge,\n"
+"MA 02139, USA."
 
 #: interpreter.cpp:42
 msgid "General"
@@ -157,59 +154,59 @@ msgstr "Dags. skjals :"
 msgid "Printer setup"
 msgstr "Uppsetning prentara"
 
-#: print.cpp:61
+#: print.cpp:65
 msgid "&Printer name"
 msgstr "Nafn &prentara"
 
-#: print.cpp:73
+#: print.cpp:77
 msgid "&Spooler command"
 msgstr "&Skipun f. prentröð"
 
-#: print.cpp:85
+#: print.cpp:89
 msgid "&Environment variable"
 msgstr "&Umhverfisbreyta"
 
-#: print.cpp:145
+#: print.cpp:160
 msgid "Print to file"
 msgstr "Prenta í skrá"
 
-#: print.cpp:150
+#: print.cpp:165
 msgid "Pages"
 msgstr "Blaðsíður"
 
-#: print.cpp:176
+#: print.cpp:191
 msgid "&All"
 msgstr "&Allar"
 
-#: print.cpp:185
+#: print.cpp:200
 msgid "&Current"
 msgstr "&Þessa"
 
-#: print.cpp:193
+#: print.cpp:208
 msgid "&Marked"
 msgstr "&Merktar"
 
-#: print.cpp:202
+#: print.cpp:217
 msgid "&Range"
 msgstr "&Span"
 
-#: print.cpp:216
+#: print.cpp:231
 msgid "to"
 msgstr "til"
 
-#: print.cpp:229
+#: print.cpp:244
 msgid "Print document in re&verse order"
 msgstr "Prenta skjal í ö&fugri röð"
 
-#: print.cpp:246
+#: print.cpp:261
 msgid "&Setup ..."
 msgstr "&Uppsetning..."
 
-#: print.cpp:304
+#: print.cpp:314
 msgid "Range error"
 msgstr "Síðuspanvilla"
 
-#: print.cpp:305
+#: print.cpp:315
 msgid ""
 "The range of pages entered for printing\n"
 "can't be understood.\n"
@@ -219,7 +216,7 @@ msgid ""
 "Check the status bar for this information.\n"
 msgstr ""
 "Síðuspanið sem valið var til prentunar\n"
-"er rangt\n"
+"er rangt.\n"
 "\n"
 "Spanið verður að vera innan þess spans í\n"
 "skjalinu sem unnið er með núna.  Þessar\n"
@@ -249,7 +246,7 @@ msgstr "Langsnið"
 
 #: kghostview.cpp:1228 kghostview.cpp:2331 viewcontrol.cpp:66
 msgid "Seascape"
-msgstr "Sjósnið"
+msgstr "Á hlið"
 
 #: kghostview.cpp:1230 kghostview.cpp:2329 viewcontrol.cpp:67
 msgid "Upside down"
@@ -500,14 +497,14 @@ msgid ""
 "\n"
 "See http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 msgstr ""
-" - PostScript skoðarinn fyrir\n"
-" K-Skjáborðið (KDE)\n"
+" - PostScript skoðarinn\n"
+"fyrir K-Skjáborðið (KDE)\n"
 "\n"
 "Skrifaður af Mark Donohoe <donohoe@kde.org> eftir\n"
-"upprunalegri útgáfu Tim Theisen\n"
+"upprunalegri útgáfu Tim Theisen.\n"
 "\n"
-"Inniheldur einnig forritstexta úr gv eftir Johanes Plass sem bætir\n"
-"þjöppun og PDF stuðning.\n"
+"Inniheldur einnig forritstexta úr gv eftir Johanes Plass sem\n"
+"bætir þjöppun og PDF stuðning.\n"
 "\n"
 "Sjá slóðina http://www.thep.physic.uni-mainz.de/~plass/gv/n"
 
