--- a/po/is/kview.po
+++ b/po/is/kview.po
@@ -1,17 +1,14 @@
 # Icelandic translation of kview.po
-# Copyright (C) 1998 Free Software Foundation, Inc.
-# Thorarinn Einarsson <thori@mindspring.com>, 1998.
+# Copyright (C) 1999 Free Software Foundation, Inc.
+# Thorarinn Einarsson <thori@mindspring.com>, 1999.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: kview\n"
 "POT-Creation-Date: 1999-01-31 01:52+0100\n"
-"PO-Revision-Date: 1998-11-04 10:55-0500\n"
+"PO-Revision-Date: 1998-02-01 10:05-0500\n"
 "Last-Translator: Thorarinn Einarsson <thori@mindspring.com>\n"
 "Language-Team: is <kde-isl@mmedia.is>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso8859-1\n"
-"Content-Transfer-Encoding: ENCODING\n"
 
 #: viewer.cpp:95
 msgid "no image loaded"
@@ -32,11 +29,11 @@ msgstr "%s: skrifuð"
 
 #: viewer.cpp:227
 msgid "Enter Zoom factor (100 = 1x):"
-msgstr "Veldu rennslisstuðul (100 = 1x):"
+msgstr "Veldu breytistuðul (100 = 1x):"
 
 #: viewer.cpp:231
 msgid "Illegal zoom factor"
-msgstr "Ógildur renslisstuðull"
+msgstr "Ógildur breytistuðull"
 
 #: viewer.cpp:282
 #, c-format
@@ -45,6 +42,9 @@ msgid ""
 "\n"
 "Sirtaj S. Kang (taj@kde.org)\n"
 msgstr ""
+"KView -- Myndskoðari. %s\n"
+"\n"
+"Sirtaj S. Kang (taj@kde.org)\n"
 
 #: viewer.cpp:285
 msgid "About KView"
@@ -64,7 +64,7 @@ msgstr "&Næsta"
 
 #: viewer.cpp:316 viewer.cpp:421
 msgid "&Slideshow On/Off"
-msgstr "&Skyggnusýning af/á"
+msgstr "&Skyggnusýning á/af"
 
 #: viewer.cpp:324
 msgid "&Zoom"
@@ -108,7 +108,7 @@ msgstr "&Endurheimta"
 
 #: viewer.cpp:369
 msgid "&Preferences..."
-msgstr ""
+msgstr "S&tillingar..."
 
 #: viewer.cpp:375
 msgid "&Zoom..."
@@ -130,7 +130,7 @@ msgstr "&Tvöfalda stærð"
 
 #: viewer.cpp:382
 msgid "&Half size"
-msgstr "H&elminga stærð"
+msgstr "&Hálfa stærð"
 
 #: viewer.cpp:384
 msgid "&Max size"
@@ -138,7 +138,7 @@ msgstr "&Hámark"
 
 #: viewer.cpp:386
 msgid "Max/&aspect"
-msgstr "Hámark+&hlutföll"
+msgstr "Hámar&k+hlutföll"
 
 #: viewer.cpp:392
 msgid "Rotate &clockwise"
@@ -150,33 +150,31 @@ msgstr "Snúa r&angsælis"
 
 #: viewer.cpp:396
 msgid "Flip &vertical"
-msgstr "Snúa á hvol&f"
+msgstr "Snúa á hv&olf"
 
 #: viewer.cpp:398
 msgid "Flip &horizontal"
-msgstr "Snúa á hli&ð"
+msgstr "Snúa á hl&ið"
 
 #: viewer.cpp:404
 msgid "Desktop &Tile"
-msgstr ""
+msgstr "Skjáborðs&flísar"
 
 #: viewer.cpp:405
-#, fuzzy
 msgid "Desktop &Max"
-msgstr "Yfir á skjá&borð"
+msgstr "Skjá&borðshámark"
 
 #: viewer.cpp:407
-#, fuzzy
 msgid "Desktop Max&pect"
-msgstr "Max&pect"
+msgstr "Skjáborðs Max&pect"
 
 #: viewer.cpp:426
 msgid "&How do I..."
-msgstr ""
+msgstr "&Hvernig..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr ""
+msgstr "H&vað er..."
 
 #: viewer.cpp:429
 msgid "&About KView..."
@@ -188,7 +186,7 @@ msgstr "Færslan er ekki búin"
 
 #: viewer.cpp:493
 msgid "Couldn't get temporary transfer name."
-msgstr "Vantar nafn."
+msgstr "Fékk ekki tímabundið nafn."
 
 #: viewer.cpp:532
 msgid "Transfer error: "
@@ -217,7 +215,7 @@ msgstr "Birtustuðullinn á að vera jákvæður"
 
 #: colour.cpp:44
 msgid "Changing brightness..."
-msgstr "Breyti birtustigs..."
+msgstr "Breyti birtustigi..."
 
 #: colour.cpp:58
 msgid "Intensity:Brightness"
@@ -289,33 +287,31 @@ msgstr "Byrja á &glæru"
 
 #: prefdlg.cpp:32
 msgid "kView Preferences"
-msgstr ""
+msgstr "Stillingar KView"
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr ""
+msgstr "&Virkja"
 
 #: prefdlg.cpp:51
 msgid "On Load"
-msgstr ""
+msgstr "Við hleðslu"
 
 #: prefdlg.cpp:58
-#, fuzzy
 msgid "Resize Window"
-msgstr "&Loka glugga"
+msgstr "Breyta glugga"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr ""
+msgstr "Breyta mynd"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
-msgstr ""
+msgstr "Engin breyting"
 
 #: prefdlg.cpp:69
-#, fuzzy
 msgid "Slideshow"
-msgstr "&Skyggnusýning af/á"
+msgstr "Skyggnusýning"
 
 #: prefdlg.cpp:72
 msgid "Loop"
@@ -323,20 +319,8 @@ msgstr "Í hring"
 
 #: prefdlg.cpp:76
 msgid "Slide interval (sec)"
-msgstr ""
+msgstr "Bil á milli skyggna (sek)"
 
 #: prefdlg.cpp:84
 msgid "&Keys"
-msgstr ""
-
-#~ msgid "&Tile"
-#~ msgstr "&Flísaleggja"
-
-#~ msgid "&Max"
-#~ msgstr "&Hámark"
-
-#~ msgid "Interval.."
-#~ msgstr "Bil.."
-
-#~ msgid "Time between slides (sec):"
-#~ msgstr "Tími milli glæra (sek):"
+msgstr "&Lyklar"
