--- a/po/de/kview.po
+++ b/po/de/kview.po
@@ -2,9 +2,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kview\n"
 "POT-Creation-Date: 1999-01-31 01:52+0100\n"
-"PO-Revision-Date: 1999-01-10 11:45+MET\n"
-"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
+"PO-Revision-Date: 1999-02-02 15:00+MET\n"
 "Translator: Stephan Kulow <coolo@kde.org>\n"
+"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
+"Language-Team: German <kde-i18n@kde.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: viewer.cpp:95
 msgid "no image loaded"
@@ -38,6 +42,9 @@ msgid ""
 "\n"
 "Sirtaj S. Kang (taj@kde.org)\n"
 msgstr ""
+"KView -- Graphik-Betrachter. %s\n"
+"\n"
+"Sirtaj S. Kang (taj@kde.org)\n"
 
 #: viewer.cpp:285
 msgid "About KView"
@@ -101,7 +108,7 @@ msgstr "&Zurücksetzen"
 
 #: viewer.cpp:369
 msgid "&Preferences..."
-msgstr ""
+msgstr "&Voreinstellungen..."
 
 #: viewer.cpp:375
 msgid "&Zoom..."
@@ -151,25 +158,23 @@ msgstr "&Horizontal spiegeln"
 
 #: viewer.cpp:404
 msgid "Desktop &Tile"
-msgstr ""
+msgstr "Desktop &Kacheln"
 
 #: viewer.cpp:405
-#, fuzzy
 msgid "Desktop &Max"
-msgstr "Auf &Desktop"
+msgstr "Desktop Ma&ximum"
 
 #: viewer.cpp:407
-#, fuzzy
 msgid "Desktop Max&pect"
-msgstr "Max&pekt"
+msgstr "Desktip Max&pekt"
 
 #: viewer.cpp:426
 msgid "&How do I..."
-msgstr ""
+msgstr "&Wie kann ich..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr ""
+msgstr "W&as is ein..."
 
 #: viewer.cpp:429
 msgid "&About KView..."
@@ -282,33 +287,31 @@ msgstr "Diashow &starten"
 
 #: prefdlg.cpp:32
 msgid "kView Preferences"
-msgstr ""
+msgstr "KView-Voreinstellungen"
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr ""
+msgstr "&Anwenden"
 
 #: prefdlg.cpp:51
 msgid "On Load"
-msgstr ""
+msgstr "Beim Laden"
 
 #: prefdlg.cpp:58
-#, fuzzy
 msgid "Resize Window"
-msgstr "&Fenster schließen"
+msgstr "Fenstergröße ändern"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr ""
+msgstr "Bildgröße änder"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
-msgstr ""
+msgstr "Größe nicht verändern"
 
 #: prefdlg.cpp:69
-#, fuzzy
 msgid "Slideshow"
-msgstr "&Diashow an/aus"
+msgstr "Diashow"
 
 #: prefdlg.cpp:72
 msgid "Loop"
@@ -316,20 +319,8 @@ msgstr "Schleife"
 
 #: prefdlg.cpp:76
 msgid "Slide interval (sec)"
-msgstr ""
+msgstr "Dia-Intervall (sec)"
 
 #: prefdlg.cpp:84
 msgid "&Keys"
-msgstr ""
-
-#~ msgid "&Tile"
-#~ msgstr "&Teilen"
-
-#~ msgid "&Max"
-#~ msgstr "&Maximal"
-
-#~ msgid "Interval.."
-#~ msgstr "Intervall..."
-
-#~ msgid "Time between slides (sec):"
-#~ msgstr "Zeit zwischen Dias (sec):"
+msgstr "&Tasten"
