--- a/po/hr/kfax.po
+++ b/po/hr/kfax.po
@@ -1,17 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Copyright (C) 1998 Free Software Foundation, Inc.
+# Vladimir Vuksan <vuksan@veus.hr>, 1998.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1999-01-25 01:42+0100\n"
-"PO-Revision-Date: 1998-03-15 20:00-0500\n"
+"Project-Id-Version: kdegraphics\n"
+"POT-Creation-Date: 1999-01-15 01:15+0100\n"
+"PO-Revision-Date: 1999-01-28 20:00-0500\n"
 "Last-Translator: Vladimir Vuksan <vuksan@veus.hr>\n"
-"Language-Team: Croatian\n"
+"Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: iso-8859-2\n"
+"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: kfax.cpp:233 kfax.cpp:827
 msgid "Show &Tool Bar"
@@ -39,6 +38,12 @@ msgid ""
 "Bernd Johannes Wuebben\n"
 "wuebben@kde.org"
 msgstr ""
+"\n"
+"KFax %s\n"
+"\n"
+"Copyright 1997-98\n"
+"Bernd Johannes Wuebben\n"
+"wuebben@kde.org"
 
 #: kfax.cpp:402
 msgid "Help page"
@@ -146,19 +151,19 @@ msgstr "Idi na stranicu ..."
 
 #: kfax.cpp:554
 msgid "w: 00000 h: 00000"
-msgstr ""
+msgstr "¹: 00000 w: 00000"
 
 #: kfax.cpp:555
 msgid "Res: XXXXX"
-msgstr ""
+msgstr "Rez: XXXXX"
 
 #: kfax.cpp:556
 msgid "Type: XXXXXXX"
-msgstr ""
+msgstr "Vrsta: XXXXXXX"
 
 #: kfax.cpp:557
 msgid "P:XXXofXXX"
-msgstr ""
+msgstr "S:XXXodXXX"
 
 #: kfax.cpp:582
 msgid "Open Location:"
@@ -265,17 +270,17 @@ msgstr "Morate prvo otvoriti fax stranicu."
 #: kfax.cpp:2400
 #, c-format
 msgid "P.%d of %d"
-msgstr ""
+msgstr "S.%d od %d"
 
 #: kfax.cpp:2411
 #, c-format
 msgid "W: %d H: %d"
-msgstr ""
+msgstr "©: %d V: %d"
 
 #: kfax.cpp:2416
 #, c-format
 msgid "Res: %s"
-msgstr ""
+msgstr "Rez: %s"
 
 #: kfax.cpp:2416 options.cpp:71
 msgid "Fine"
@@ -287,11 +292,11 @@ msgstr "Normalno"
 
 #: kfax.cpp:2424
 msgid "Type: Tiff "
-msgstr ""
+msgstr "Vrsta: Tiff "
 
 #: kfax.cpp:2427
 msgid "Type: Raw "
-msgstr ""
+msgstr "Vrsta: Sirovo "
 
 #: kfax.cpp:2738
 msgid ""
@@ -415,21 +420,3 @@ msgstr "©irina Faxa:"
 #: options.cpp:142
 msgid "height:"
 msgstr "visina:"
-
-#~ msgid "About KFax"
-#~ msgstr "O KFaxu"
-
-#~ msgid "Version "
-#~ msgstr "Inaèica "
-
-#~ msgid "&About..."
-#~ msgstr "&O..."
-
-#~ msgid "KFax &Help "
-#~ msgstr "KFax &Pomoæ"
-
-#~ msgid "Select Facsimile to Open"
-#~ msgstr "Izaberite Fax koji ¾elite otvoriti"
-
-#~ msgid "Select Facsimile to Add"
-#~ msgstr "Izaberite Fax koji ¾elite dodati"
