--- a/po/da/kview.po
+++ b/po/da/kview.po
@@ -45,6 +45,9 @@ msgid ""
 "\n"
 "Sirtaj S. Kang (taj@kde.org)\n"
 msgstr ""
+"KView -- Grafik viser. %s\n"
+"\n"
+"Sirtaj S. Kang (taj@kde.org)\n"
 
 #: viewer.cpp:285
 msgid "About KView"
@@ -108,7 +111,7 @@ msgstr "&Nulstil"
 
 #: viewer.cpp:369
 msgid "&Preferences..."
-msgstr ""
+msgstr "&Præferencer..."
 
 #: viewer.cpp:375
 msgid "&Zoom..."
@@ -158,25 +161,23 @@ msgstr "Drej &vandret"
 
 #: viewer.cpp:404
 msgid "Desktop &Tile"
-msgstr ""
+msgstr "Arbejdsplads &flise"
 
 #: viewer.cpp:405
-#, fuzzy
 msgid "Desktop &Max"
-msgstr "Til &arbejdsplads"
+msgstr "Arbejdsplads &max"
 
 #: viewer.cpp:407
-#, fuzzy
 msgid "Desktop Max&pect"
-msgstr "Maks&pekt"
+msgstr "Arbejdsplads Maks&pekt"
 
 #: viewer.cpp:426
 msgid "&How do I..."
-msgstr ""
+msgstr "&Hvordan gør jeg..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr ""
+msgstr "H&vad er en ..."
 
 #: viewer.cpp:429
 msgid "&About KView..."
@@ -289,33 +290,31 @@ msgstr "Start &lystbillede"
 
 #: prefdlg.cpp:32
 msgid "kView Preferences"
-msgstr ""
+msgstr "kView præferencer"
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr ""
+msgstr "&Anvend"
 
 #: prefdlg.cpp:51
 msgid "On Load"
-msgstr ""
+msgstr "Om belastning"
 
 #: prefdlg.cpp:58
-#, fuzzy
 msgid "Resize Window"
-msgstr "&Luk vindue"
+msgstr "&Ændr vinduesstørrelse"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr ""
+msgstr "Ændr størrelse på billede"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
-msgstr ""
+msgstr "Ingen størrelsesændring"
 
 #: prefdlg.cpp:69
-#, fuzzy
 msgid "Slideshow"
-msgstr "&Lysbilledfremvisning til/fra"
+msgstr "Lysbilledfremvisning"
 
 #: prefdlg.cpp:72
 msgid "Loop"
@@ -323,20 +322,8 @@ msgstr "Sløjfe"
 
 #: prefdlg.cpp:76
 msgid "Slide interval (sec)"
-msgstr ""
+msgstr "Interval mellem billeder (sek)"
 
 #: prefdlg.cpp:84
 msgid "&Keys"
-msgstr ""
-
-#~ msgid "&Tile"
-#~ msgstr "&Side ved side"
-
-#~ msgid "&Max"
-#~ msgstr "&Max"
-
-#~ msgid "Interval.."
-#~ msgstr "Interval..."
-
-#~ msgid "Time between slides (sec):"
-#~ msgstr "Tid mellem lysbilleder (sek):"
+msgstr "&Nøgler"
