CVS_SILENT: made messages

--- a/po/fr/kiconedit.po
+++ b/po/fr/kiconedit.po
@@ -592,10 +592,11 @@ msgstr ""
 "Glisser-Déplacer l'icône\n"
 "\n"
 "Avec ce bouton, vou pouvez glisser une copie de l'icône courante et la "
-"déposer dans une fenêtre qui accèpte les dépacements, par ex. un autre Editeur d'Icône.\n"
+"déposer dans une fenêtre qui accèpte les dépacements, par ex. un autre "
+"Editeur d'Icône.\n"
 "\n"
-"(Note: Cette fonctionnalité utilise le protocole QT XDND qui n'est pas encore standard "
-"dans KDE)"
+"(Note: Cette fonctionnalité utilise le protocole QT XDND qui n'est pas "
+"encore standard dans KDE)"
 
 #: kiconedit.cpp:880
 msgid ""
