--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdegraphics (4:1.1-19990207-2) unstable; urgency=low
+
+  * fixed a bug with the wrong libjpeg version
+
+ -- Stephan Kulow <coolo@kde.org>  Tue,  9 Feb 1999 10:43:45 +0100
+
 kdegraphics (4:1.1-19990207-1) unstable; urgency=low
 
   * new upstream version 1.1 and new epoche
