--- a/po/es/kdvi.po
+++ b/po/es/kdvi.po
@@ -2,8 +2,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1998-12-28 15:35+0100\n"
-"PO-Revision-Date: 1998-12-07 22:08+0200\n"
+"PO-Revision-Date: 1999-02-06 22:08+0100\n"
 "Last-Translator: Alonso Lara <jlaram@nexo.es>\n"
+"Language-Team: Spanish <kde-es@kyb.uni-stuttgart.de>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8-bit\n"
 
 #: dviwin.cpp:215 dviwin.cpp:231 dviwin.cpp:245 dviwin.cpp:282 dviwin.cpp:299
 #: kdvi.cpp:514
@@ -60,12 +64,11 @@ msgstr "¿Qué es esto? ¡Un problema con el DVI!\n"
 
 #: dviwin.cpp:508
 msgid "File status changed."
-msgstr ""
+msgstr "Estado del archivo cambiado."
 
 #: dviwin.cpp:513 kdvi.cpp:937
-#, fuzzy
 msgid "File reloaded."
-msgstr "Releer fichero"
+msgstr "Archivo Releído."
 
 #: kdvi.cpp:93
 msgid "No document"
@@ -463,9 +466,9 @@ msgid "Small text button set to shrink factor "
 msgstr "Botón de texto pequeño asignado al factor de reducción"
 
 #: kdvi.cpp:931
-#, fuzzy, c-format
+#, c-format
 msgid "Shrink: %d"
-msgstr "Encoger: xx"
+msgstr "Encoger: %d"
 
 #: marklist.cpp:37
 msgid "Mark current"
