--- a/po/es/kghostview.po
+++ b/po/es/kghostview.po
@@ -1,8 +1,13 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1999-01-31 01:52+0100\n"
-"PO-Revision-Date: 1998-10-17 13:45+0200\n"
+"PO-Revision-Date: 1999-02-06 21:45+0100\n"
 "Last-Translator: Alonso Lara <jlaram@nexo.es>\n"
+"Language-Team: Spanish <kde-es@kyb.uni-stuttgart.de>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8-bit\n"
 
 #: marklist.cpp:38
 msgid "Mark current page"
@@ -692,132 +697,3 @@ msgstr "Sc.%d"
 #: zoom.cpp:46
 msgid "&Magnification"
 msgstr "&Magnificación"
-
-#~ msgid "&Defaults"
-#~ msgstr "Por &defecto"
-
-#~ msgid "Next"
-#~ msgstr "Siguiente"
-
-#~ msgid "Zoom"
-#~ msgstr "Zoom"
-
-#~ msgid "&Action"
-#~ msgstr "&Acción"
-
-#~ msgid "&Default key"
-#~ msgstr "Tecla por &defecto"
-
-#~ msgid "Print"
-#~ msgstr "Imprimir"
-
-#~ msgid "&View control ..."
-#~ msgstr "Control de &vista ..."
-
-#~ msgid "&Fit to page width"
-#~ msgstr "A&justar ancho de página"
-
-#~ msgid "&Redisplay"
-#~ msgstr "&Actualizar"
-
-#~ msgid "Change view ..."
-#~ msgstr "Canviar vista ..."
-
-#~ msgid "Turn antialiasing on"
-#~ msgstr "Antialiasing: Sí"
-
-#~ msgid "Turn antialiasing off"
-#~ msgstr "Antialiasing: No"
-
-#~ msgid "Show Ghostscript messages"
-#~ msgstr "Mostrar mensajes de Ghostscript"
-
-#~ msgid "Hide Ghostscript messages"
-#~ msgstr "Ocultar mensajes de Ghostscript"
-
-#~ msgid "Force changes to ..."
-#~ msgstr "Forzar cambios a ..."
-
-#~ msgid "&1."
-#~ msgstr "&1."
-
-#~ msgid "&2."
-#~ msgstr "&2."
-
-#~ msgid "&3."
-#~ msgstr "&3."
-
-#~ msgid "&4."
-#~ msgstr "&4."
-
-#~ msgid "&Shrink wrap"
-#~ msgstr "A&justado"
-
-#~ msgid "&1. "
-#~ msgstr "&1."
-
-#~ msgid "&2. "
-#~ msgstr "&2."
-
-#~ msgid "&3. "
-#~ msgstr "&3."
-
-#~ msgid "&4. "
-#~ msgstr "&4."
-
-#~ msgid "Title :"
-#~ msgstr "Título:"
-
-#~ msgid "Date :"
-#~ msgstr "Fecha:"
-
-#~ msgid "Mark this page"
-#~ msgstr "Marcar esta página"
-
-#~ msgid "Printer Name : "
-#~ msgstr "Nombre de impresora : "
-
-#~ msgid ""
-#~ "The file\n"
-#~ "\"%s\"\n"
-#~ "could not be found."
-#~ msgstr ""
-#~ "El archivo\n"
-#~ "\"%s\"\n"
-#~ "no pudo encontrarse."
-
-#~ msgid "Didn't recognise file\n"
-#~ msgstr "No reconocí el archivo\n"
-
-#~ msgid "&Close"
-#~ msgstr "&Cerrar"
-
-#~ msgid "E&xit"
-#~ msgstr "&Salir"
-
-#~ msgid "&File"
-#~ msgstr "&Archivo"
-
-#~ msgid "&View"
-#~ msgstr "&Ver"
-
-#~ msgid "&Options"
-#~ msgstr "&Opciones"
-
-#~ msgid "&Help"
-#~ msgstr "&Ayuda"
-
-#~ msgid "Sorry"
-#~ msgstr "Disculpas"
-
-#~ msgid "KGhostview: Version 0.5"
-#~ msgstr "KGhostview: Versión 0.5"
-
-#~ msgid "Go to"
-#~ msgstr "Ir a"
-
-#~ msgid "Even"
-#~ msgstr "Pares"
-
-#~ msgid "Odd"
-#~ msgstr "Impares"
