--- a/po/es/kpaint.po
+++ b/po/es/kpaint.po
@@ -2,9 +2,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1999-01-11 01:50+0100\n"
-"PO-Revision-Date: 1998-12-07 23:43+0200\n"
+"PO-Revision-Date: 1999-02-06 23:43+0100\n"
 "Last-Translator: Alonso Lara <jlaram@nexo.es>\n"
-"Language-Team: Spanish <kde-es@kyb.ml.org>\n"
+"Language-Team: Spanish <kde-es@kyb.uni-stuttgart.de>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8-bit\n"
 
 #: areaselect.cpp:20
 msgid "Area Selection"
@@ -223,6 +226,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint versión %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint está licenciado bajo la\n"
+"Licencia General Pública GNU,\n"
+"ver la documentación en línea\n"
+"para detalles."
 
 #: kpaint.cpp:508
 msgid "&Image"
@@ -376,7 +387,7 @@ msgstr "Ancho de línea"
 
 #: properties.cpp:307 properties.cpp:366
 msgid "End style:"
-msgstr "Estilo de final:"
+msgstr "Estilo final:"
 
 #: properties.cpp:312 properties.cpp:325 properties.cpp:370 properties.cpp:377
 msgid "Not Yet"
@@ -393,102 +404,3 @@ msgstr "Ajustar color de línea"
 #: roundangle.cpp:19
 msgid "Roundangle"
 msgstr "Angulo Redondo"
-
-#~ msgid "KPaint"
-#~ msgstr "KPaint"
-
-#~ msgid " version "
-#~ msgstr " versión "
-
-#~ msgid "(c) "
-#~ msgstr "(c) "
-
-#~ msgid ""
-#~ "\n"
-#~ "(c) Richard J. Moore 1997 Released under GPL see LICENSE for details\n"
-#~ msgstr ""
-#~ "\n"
-#~ "(c) Richard J. Moore 1997 Distribuido bajo GPL, ver LICENSE para detalles\n"
-
-#~ msgid "Usage: "
-#~ msgstr "Uso:"
-
-#~ msgid " [url | filename]\n"
-#~ msgstr "[url | fichero]\n"
-
-#~ msgid "Exit"
-#~ msgstr "Salir"
-
-#~ msgid "Open Location:"
-#~ msgstr "Abrir URL:"
-
-#~ msgid "Save to Location:"
-#~ msgstr "Guardar en URL:"
-
-#~ msgid "Continue"
-#~ msgstr "Continuar"
-
-#~ msgid "KPaint: Malformed URL"
-#~ msgstr "KPaint: URL incorrecta"
-
-#~ msgid ""
-#~ "Error: Malformed URL\n"
-#~ "KPaint does not understand the specifed URL, check it's correct."
-#~ msgstr ""
-#~ "Error: URL incorrecta\n"
-#~ "KPaint no entiende la URL especificada; por favor, compruebe si es correcta."
-
-#~ msgid ""
-#~ "KPaint is already accessing a remote file, you must\n"
-#~ "cancel the current remote job or wait for it to complete."
-#~ msgstr ""
-#~ "KPaint ya está accediendo a un fichero remoto, debe cancelar\n"
-#~ "el trabajo remoto actual o esperar a que se acabe."
-
-#~ msgid "KPaint: Could not find KFM"
-#~ msgstr "KPaint: Imposible encontrar KFM"
-
-#~ msgid "Error: KPaint could not find a running KFM or start one itself."
-#~ msgstr ""
-#~ "Error: KPaint no puede encontrar un KFM en ejecución ni iniciar uno."
-
-#~ msgid "KPaint: Network Load Failed"
-#~ msgstr "KPaint: Error cargando de la red"
-
-#~ msgid ""
-#~ "Error: Netword Load Failed\n"
-#~ "Something went wrong :-("
-#~ msgstr "Error: Error cargando de la redOcurrió algún error"
-
-#~ msgid "KPaint: Could not start KFM"
-#~ msgstr "KPaint: Imposible iniciar KFM"
-
-#~ msgid "Save File As"
-#~ msgstr "Guradar fichero como"
-
-#~ msgid "This was a QString"
-#~ msgstr "Esto fue una QString"
-
-#~ msgid "Cut"
-#~ msgstr "Cortar"
-
-#~ msgid "Copy"
-#~ msgstr "Copiar"
-
-#~ msgid "Paste"
-#~ msgstr "Pegar"
-
-#~ msgid "Index"
-#~ msgstr "Indice"
-
-#~ msgid "&File"
-#~ msgstr "&Fichero"
-
-#~ msgid "&Help"
-#~ msgstr "&Ayuda"
-
-#~ msgid "Sorry"
-#~ msgstr "Disculpe"
-
-#~ msgid "Browse..."
-#~ msgstr "Examinar..."
