--- a/po/es/ksnapshot.po
+++ b/po/es/ksnapshot.po
@@ -2,16 +2,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1999-01-10 01:46+0100\n"
-"PO-Revision-Date: 1998-12-07 23:51+0200\n"
+"PO-Revision-Date: 1999-02-06 23:51+0100\n"
 "Last-Translator: alonso Lara <jlaram@nexo.es>\n"
-"Language-Team: Spanish <kde-es@kyb.ml.org>\n"
+"Language-Team: Spanish <kde-es@kyb.uni-stuttgart.de>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8-bit\n"
 
 #: ksnapshot.cpp:40
 msgid "snapshot"
 msgstr "instantanea"
 
 #: ksnapshot.cpp:94
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Press the `Grab' button, then click\n"
 "on a window to grab it.\n"
@@ -27,7 +30,7 @@ msgstr ""
 "KSnapshot es copyright de Richard Moore (rich@kde.org)\n"
 "y está publicado bajo la LGPL\n"
 "\n"
-"Versión: "
+"Versión: %s"
 
 #: ksnapshot.cpp:129
 msgid "Filename:"
