--- a/po/es/kview.po
+++ b/po/es/kview.po
@@ -1,9 +1,13 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1999-01-31 01:52+0100\n"
-"PO-Revision-Date: 1998-10-18 23:03+0200\n"
+"PO-Revision-Date: 1999-02-06 23:03+0100\n"
 "Last-Translator: Alonso Lara <jlaram@nexo.es>\n"
-"First-Translator: Alonso Lara <jlaram@nexo.es>\n"
+"Language-Team: Spanish <kde-es@kyb.uni-stuttgart.de>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Transfer-Encoding: 8-bit\n"
 
 #: viewer.cpp:95
 msgid "no image loaded"
@@ -37,6 +41,9 @@ msgid ""
 "\n"
 "Sirtaj S. Kang (taj@kde.org)\n"
 msgstr ""
+"KView -- Visor de Gráficos. %s\n"
+"\n"
+"Sirtaj S. Kang (taj@kde.org)\n"
 
 #: viewer.cpp:285
 msgid "About KView"
@@ -100,11 +107,11 @@ msgstr "&Reiniciar"
 
 #: viewer.cpp:369
 msgid "&Preferences..."
-msgstr ""
+msgstr "&Preferencias..."
 
 #: viewer.cpp:375
 msgid "&Zoom..."
-msgstr "A&cercamiento..."
+msgstr "&Zoom..."
 
 #: viewer.cpp:376
 #, c-format
@@ -150,25 +157,23 @@ msgstr "Invertir &horizontal"
 
 #: viewer.cpp:404
 msgid "Desktop &Tile"
-msgstr ""
+msgstr "Escritorio &Tile"
 
 #: viewer.cpp:405
-#, fuzzy
 msgid "Desktop &Max"
-msgstr "Al &Escritorio"
+msgstr "Escritorio &Max"
 
 #: viewer.cpp:407
-#, fuzzy
 msgid "Desktop Max&pect"
-msgstr "Max&pect"
+msgstr "Escritorio Max&pect"
 
 #: viewer.cpp:426
 msgid "&How do I..."
-msgstr ""
+msgstr "&Como hago..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr ""
+msgstr "&Qué es un..."
 
 #: viewer.cpp:429
 msgid "&About KView..."
@@ -281,33 +286,31 @@ msgstr "Iniciar &secuencia"
 
 #: prefdlg.cpp:32
 msgid "kView Preferences"
-msgstr ""
+msgstr "Preferencias de kView"
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr ""
+msgstr "&Aplicar"
 
 #: prefdlg.cpp:51
 msgid "On Load"
-msgstr ""
+msgstr "En Carga"
 
 #: prefdlg.cpp:58
-#, fuzzy
 msgid "Resize Window"
-msgstr "&Cerrar Ventana"
+msgstr "Cambiar Tamaño de Ventana"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr ""
+msgstr "Cambiar Tamaño de Imagen"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
-msgstr ""
+msgstr "No Cambiar Tamaño"
 
 #: prefdlg.cpp:69
-#, fuzzy
 msgid "Slideshow"
-msgstr "Activar/Desactivar Secuencias"
+msgstr "Secuencia"
 
 #: prefdlg.cpp:72
 msgid "Loop"
@@ -315,32 +318,8 @@ msgstr "Bucle"
 
 #: prefdlg.cpp:76
 msgid "Slide interval (sec)"
-msgstr ""
+msgstr "Intervalo en Secuencia (seg)"
 
 #: prefdlg.cpp:84
 msgid "&Keys"
-msgstr ""
-
-#~ msgid "&Tile"
-#~ msgstr "E&mbaldosar"
-
-#~ msgid "&Max"
-#~ msgstr "&Max"
-
-#~ msgid "Interval.."
-#~ msgstr "Intervalo.."
-
-#~ msgid "Time between slides (sec):"
-#~ msgstr "Tiempo entre secuencias (seg):"
-
-#~ msgid "Fi&lter"
-#~ msgstr "Fi&ltro"
-
-#~ msgid "&Open.."
-#~ msgstr "&Abrir.."
-
-#~ msgid "Darkening..."
-#~ msgstr "Oscureciendo..."
-
-#~ msgid "Intensity:Darken"
-#~ msgstr "Intensidad:Oscuridad"
+msgstr "&Teclas"
